--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "git-trending",
-  "homepage": "git-trending",
+  "homepage": "https://huocha.github.io/git-trending",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
